testcase 수정