@@ -141,13 +141,13 @@ class DevQaCmApplicationTests {
 	}
 
 	@Test
-	void testCase() {
-		SiteUser author = userService.getUser(null);
+	void testMakeQuestionMany() {
+		SiteUser author = userService.getUser("user1");
 
 		for (int i = 1; i <= 300; i++) {
-			String subject = String.format("테스트 데이터입니다:[%03d]", i);
-			String content = "내용무";
-			this.questionService.create(subject, content, author);
+			String subject = "테스트 데이터입니다 : [%03d]".formatted(i);
+			String content = "내용무 : %d".formatted((int) (Math.random() * 100));
+			questionService.create(subject, content, author);
 		}
 	}
 }
